   * add.installr.GUI - made sure the function wouldn't add items if "Update" is already present. e.g: made a fail-safe machanism in case the function installr:::add.installr.GUI() is run more than once (my thanks goes to Dieter Menne for the suggestion)

BUG FIXES:
   * install.pandoc - fixed it to work with the new URL scheme they've chosen for their site (they moved to MSI instead of .EXE about two weeks ago...)
   * updateR - fixed a type in the installation massage (thanks to Henrik Pärn)

OTHER NOTES:
   * Fixed wrongly used capital letters (for example, in the NEWS file)


installr 0.9 (2013-03-29)
---------------------------

UPDATED FUNCTIONS:
   * Made sure to include a lower-case version of all install.X functions.

OTHER NOTES:
   * More documentation.  Updated README.md
   * installr 0.9 is to be shiped to CRAN.



installr 0.8.8 (2013-03-26)
---------------------------
NEW FUNCTIONS ADDED:
   * install.notepadpp
   * install.npptor
   * install.Cygwin
   * install.LaTeX2RTF



installr 0.8.7 (2013-03-16)
---------------------------
NEW FUNCTIONS ADDED:
   * install.SWFTools
   * install.FFmpeg
   * install.7zip - for unzipping of FFmpeg
   * system.PATH - to see what is in the users PATH for running .exe programs.

UPDATED FUNCTIONS:
   * os.manage - now asks the user in how many minutes to perform the operation.

BUG FIXES:
   * Fixed a bug in install.LyX.rd that caused it to not load properly when using install_github (props goes to Richard Cotton for catching the bug.)

installr 0.8.6
--------------

NEW FUNCTIONS ADDED:
   * install.ImageMagick
   * install.GraphicsMagick
   * install.LyX
   * os.manage, os.shutdown, os.restart, os.hibernate, os.sleep, os.lock (set of functions to turn off the computer after simulation or the likes)

UPDATED FUNCTIONS:
   * install.Rtools - removed "latest_Frozen", added "check".  Made the function know which Rtools to install based on your R version (and if it is not known - it asks the user to choose a version)