@@ -4,7 +4,8 @@
 \usage{
   updateR(browse_news, install_R, copy_packages,
     keep_old_packages, update_packages, start_new_R,
-    quit_R, print_R_versions = TRUE, use_GUI = TRUE, ...)
+    quit_R, print_R_versions = TRUE, use_GUI = TRUE,
+    to_checkMD5sums = TRUE, ...)
 }
 \arguments{
   \item{browse_news}{if TRUE (and if there is a newer
@@ -54,6 +55,12 @@
   menu should be used if available.  If TRUE, and on
   Windows, it will use \link{winDialog}, otherwise it will
   use \link[utils]{menu}.}
+
+  \item{to_checkMD5sums}{Should we check that the new R
+  installation has the files we expect it to (by checking
+  the MD5 sums)? default is TRUE.  It assumes that the R
+  which was isntalled is the latest R version. parameter is
+  passed to install.R()}
 
   \item{...}{Other arguments (this is currently not used in
   any way)}
